resolved open issues for flight service